--- a/DB2/templates/new.html
+++ b/DB2/templates/new.html
@@ -1,3 +1,4 @@
+{% load bootstrap %}
 <!DOCTYPE html>
  <html>
         <head>
@@ -22,6 +23,18 @@
    {% block title %}
        <div class="page-header"><h1 style="text-align: center;">New Order</h1></div>
    {% endblock %}
+
+    <form role="form" action = {{ request.get_full_path }} method="post">
+       {% csrf_token %}
+       <div class="form-group  col-sm-offset-1" style="width:864px;">
+       {{ new_rec|bootstrap }}
+       </div>
+       <div class="form-group">
+           <div class="col-sm-5 col-sm-offset-1">
+               <button type="submit" class="btn btn-primary" name="save_btn">Submit</button>
+           </div>
+       </div>
+   </form>
 
 </body>
 </html>
