--- a/DB2/templates/order_list.html
+++ b/DB2/templates/order_list.html
@@ -5,7 +5,7 @@
             <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
             <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
             <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-             <script src="{% static "jquery-2.2.4.min.js" %}"></script>
+            <script src="{% static "jquery-2.2.4.min.js" %}"></script>
             <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
             <link href="{% static "css/bootstrap-theme.min.css" %}" rel="stylesheet">
             <link href="{% static "css/core.css" %}" rel="stylesheet">
@@ -22,6 +22,16 @@
                     <li class="active"><a href="{% url 'order_list' %}">Home</a></li>
                     <li><a href="{% url 'new' %}">Make new order</a></li>
                 </ul>
+                <form class="navbar-form navbar-left">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit">
+                            <i class="glyphicon glyphicon-search"></i>
+                        </button>
+                    </div>
+                    </div>
+                </form>
             </div>
             </nav>
 
@@ -29,6 +39,7 @@
                 <div class="page-header"><h1 style="text-align: center;">Orders</h1></div>
             {% endblock %}
 
+            {% if orders %}
             <table class="table table-hover">
                 <thead>
                     <tr>
@@ -51,6 +62,11 @@
                     {% endfor %}
                 </tbody>
             </table>
+            {% else %}
+                <p>Orders list is empty</p>
+            {% endif %}
+
+
 
             <script>
             jQuery(document).ready(function($) {
