Add full text search

--- a/DB2/templates/order_list.html
+++ b/DB2/templates/order_list.html
@@ -22,15 +22,22 @@
                     <li class="active"><a href="{% url 'order_list' %}">Home</a></li>
                     <li><a href="{% url 'new' %}">Make new order</a></li>
                 </ul>
-                <form class="navbar-form navbar-left">
+                <form class="navbar-form navbar-left" method="GET">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search">
+                        <input type="text" class="form-control" name="search" placeholder="Search">
                     <div class="input-group-btn">
                         <button class="btn btn-default" type="submit">
                             <i class="glyphicon glyphicon-search"></i>
                         </button>
                     </div>
                     </div>
+                    <label class="radio-inline">
+                            <input type="radio" name="optradio" value="include" checked="">Include word
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="optradio" value="exclude" > by phrase
+                        </label>
+
                 </form>
             </div>
             </nav>
