Make changes in search

--- a/DB2/templates/order_list.html
+++ b/DB2/templates/order_list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> {% load staticfiles %}
+<!DOCTYPE html> {% load bootstrap %} {% load staticfiles %}
  <html>
         <head>
             <title>SuperDelivery</title>
@@ -53,8 +53,8 @@
                 <thead>
                     <tr>
                     <th>ID</th>
-                    <th>ProductID</th>
-                    <th>ClientID</th>
+                    <th>Product</th>
+                    <th>Client</th>
                     <th>Date&Time</th>
                     <th>Amount</th>
                     </tr>
