--- a/DB3/templates/edit.html
+++ b/DB3/templates/edit.html
@@ -34,6 +34,7 @@
            <div class="col-sm-10 col-sm-offset-1">
                <button type="submit" class="btn btn-primary" name="save_btn">Submit</button>
                <button type="submit" class="btn btn-primary" name="delete_btn">Delete</button>
+               <button type="submit" class="btn btn-primary" name="delete_trg">Delete trigger</button>
            </div>
        </div>
    </form>
